--- a/app/src/main/res/drawable/recevier_bubble.xml
+++ b/app/src/main/res/drawable/recevier_bubble.xml
@@ -7,13 +7,13 @@
             android:pivotY="0%"
             android:toDegrees="0" >
             <shape android:shape="rectangle" >
-                <solid android:color="#000000" />
+                <solid android:color="#18FFFF" />
             </shape>
         </rotate>
     </item>
     <item android:left="16dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/black" />
+            <solid android:color="@color/teal_200" />
             <corners android:radius="20dp" />
         </shape>
     </item>
