--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.CIrcle" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#FF6FA9</item>
+        <item name="colorPrimary">#817400</item>
         <item name="colorPrimaryVariant">#2399D4</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
